Added steps for installation of JavaFX (used for frontend)